--- a/output_json/Spark_PageRank_Application.json
+++ b/output_json/Spark_PageRank_Application.json
@@ -490,7 +490,7 @@
         "recordswrite": 0.0,
         "shufflerecordsread": 0.0,
         "shufflerecordswrite": 0.0,
-        "skipped": false,
+        "skipped": true,
         "weight": 0
     },
     "9": {
@@ -530,7 +530,7 @@
         "recordswrite": 0.0,
         "shufflerecordsread": 0.0,
         "shufflerecordswrite": 0.0,
-        "skipped": false,
+        "skipped": true,
         "weight": 0
     },
     "10": {
@@ -580,7 +580,7 @@
         "recordswrite": 0.0,
         "shufflerecordsread": 0.0,
         "shufflerecordswrite": 0.0,
-        "skipped": false,
+        "skipped": true,
         "weight": 0
     },
     "11": {
@@ -634,7 +634,7 @@
         "recordswrite": 0.0,
         "shufflerecordsread": 0.0,
         "shufflerecordswrite": 0.0,
-        "skipped": false,
+        "skipped": true,
         "weight": 0
     },
     "12": {
@@ -704,7 +704,7 @@
         "recordswrite": 0.0,
         "shufflerecordsread": 0.0,
         "shufflerecordswrite": 0.0,
-        "skipped": false,
+        "skipped": true,
         "weight": 0
     },
     "13": {
